--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=mssc
+
+spring.datasource.generate-unique-name=false
+spring.datasource.name=asiri_institute
+spring.h2.console.enabled=true
+
